--- a/bookmark/templates/bookmark/explore.html
+++ b/bookmark/templates/bookmark/explore.html
@@ -1,7 +1,7 @@
 {% extends 'site_base.html' %}
 {% load i18n %}
 {% load endless %}
-{% load gravatar %}
+{% load profiles_tags %}
 {% load bookmark_tags %}
 
 {% block head_title %}{% trans "Explore" %}{% endblock %}
