--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -1,7 +1,7 @@
 {% extends 'site_base.html'%}
 {% load i18n %}
 {% load compressed %}
-{% load gravatar %}
+{% load profiles_tags %}
 {% load agon_tags %}
 {% load kaleo_tags %}
 {% load notifications_tags %}
@@ -41,7 +41,7 @@ bookmark-app
                 <div class="row-fluid">
                     <div class="span4">
                         <a href="{% url bookmark_profile user %}" title="{{ user }}">
-                            <img class="avatar" alt="{{ user }}" src="{% gravatar_for_email user.email 64 %}&r=r" />
+                            <img class="avatar" alt="{{ user }}" src="{% avatar user.email 64 %}&r=r" />
                         </a>
                     </div>
                     <div class="span7 info pull-right">
