--- a/bookmark/templates/bookmark/sync.html
+++ b/bookmark/templates/bookmark/sync.html
@@ -1,5 +1,5 @@
 {% extends 'site_base.html' %}
-{% load gravatar %}
+{% load profiles_tags %}
 {% load i18n %}
 {% block head_title %}
 {% trans "Sync" %}
