support douban login

--- a/lianpeng/templates/account/_signup_sidebar.html
+++ b/lianpeng/templates/account/_signup_sidebar.html
@@ -9,6 +9,12 @@
         </a>
     </li>
     <li>
+        <a href="{% url socialauth_begin 'douban2' %}">
+            <img src="http://www.douban.com/favicon.ico" width="16" />
+            使用豆瓣帐号登录
+        </a>
+    </li>
+    <li>
         <a href="{% url socialauth_begin 'google-oauth2' %}">
             <img src="http://www.google.com/favicon.ico" width="16" />
             使用Google帐号登录
