--- a/bookmark/templates/bookmark/developing.html
+++ b/bookmark/templates/bookmark/developing.html
@@ -1,7 +1,7 @@
 {% extends "site_base.html" %}
 
 {% block body %}
-<div class="page-title">
-    <h1>正在开发中</h1>
+<div class="page-title hero-unit">
+    <h1><i class="icon-beaker"></i> 正在开发中...</h1>
 </div>
 {% endblock %}
