--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -420,11 +420,13 @@ bookmark-app
                                             </a>
                                             &nbsp;
                                             <i class="icon-time"></i>&nbsp;<small class=""><%-bookmark.timesince%></small>
+                                            {% if user.is_staff %}
                                             &nbsp;
                                             <a href="/bookmark/snapshot/<%-bookmark.unique_key%>.html" class="muted">
                                                 <i class="icon-camera"></i>&nbsp;<small> {% trans "Snapshot" %}
                                                 </small>
                                             </a>
+                                            {% endif %}
                                         </div>
                                     </div>
                                     <%if(bookmark.note) {%>
