add charset info to frontend

--- a/harvest/templates/harvest/bookmarklet.html
+++ b/harvest/templates/harvest/bookmarklet.html
@@ -41,6 +41,7 @@
                     </div>
                     <input type="hidden" name="domain" value="{{ data.domain }}">
                     <input type="hidden" name="url" value="{{ data.url }}">
+                    <input type="hidden" name="charset" value="{{ data.charset }}">
                     <div class="row-fluid">
                         <textarea name="note" placeholder="{% trans "Enter your note for this page." %}" rows="4" class="span12">{{ data.note }}</textarea>
                     </div>
