--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -422,7 +422,7 @@ bookmark-app
                                             <i class="icon-time"></i>&nbsp;<small class=""><%-bookmark.timesince%></small>
                                             {% if user.is_staff %}
                                             &nbsp;
-                                            <a href="/bookmark/snapshot/<%-bookmark.unique_key%>.html" class="muted">
+                                            <a href="/bookmark/snapshot/<%-bookmark.id%>.html" target="_blank" class="muted">
                                                 <i class="icon-camera"></i>&nbsp;<small> {% trans "Snapshot" %}
                                                 </small>
                                             </a>
