get the create list button and input at the same row

--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -161,9 +161,9 @@ bookmark-app
                 </div>
                 <hr class="user-lists-sep">
                 <a href="javascript:;" class="btn new-list-button">{% trans "New list" %}</a>
-                <form action="" method="get" class="new-list-form hide" accept-charset="utf-8">
-                    <input type="text" name="name" class="list-name" value="">
-                    <p><input type="submit" class="btn btn-primary" value="{% trans "Create" %}"></p>
+                <form action="" method="get" class="new-list-form form-inline hide" accept-charset="utf-8">
+                    <input type="text" name="name" class="list-name input-medium" value="">
+                    <input type="submit" class="btn btn-primary" value="{% trans "Create" %}">
                 </form>
             </div>
         </div>
