--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -162,8 +162,8 @@ bookmark-app
                 <hr class="user-lists-sep">
                 <a href="javascript:;" class="btn new-list-button">{% trans "New list" %}</a>
                 <form action="" method="get" class="new-list-form form-inline hide" accept-charset="utf-8">
-                    <input type="text" name="name" class="list-name input-medium" value="">
-                    <input type="submit" class="btn btn-primary" value="{% trans "Create" %}">
+                    <input type="text" name="name" class="list-name span8" value="">
+                    <input type="submit" class="btn btn-primary span4" value="{% trans "Create" %}">
                 </form>
             </div>
         </div>
