add an icon to feedback modal

--- a/lianpeng/static/css/bootstrap.css
+++ b/lianpeng/static/css/bootstrap.css
@@ -975,3 +975,4 @@ footer{margin:20px 0;}
 .bs-docs-sidenav>li:first-child>a{-webkit-border-radius:6px 6px 0 0;-moz-border-radius:6px 6px 0 0;border-radius:6px 6px 0 0;}
 .bs-docs-sidenav>li>a{display:block;width:190px \9;margin:0 0 -1px;padding:8px 14px;border:1px solid #e5e5e5;}
 .bs-docs-sidenav>li:last-child>a{-webkit-border-radius:0 0 6px 6px;-moz-border-radius:0 0 6px 6px;border-radius:0 0 6px 6px;}
+#feedback .icon-heart{font-size:100px;color:wheat;}
