--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -868,3 +868,9 @@ footer {
     -moz-border-radius: 0 0 6px 6px;
     border-radius: 0 0 6px 6px;
 }
+
+/* Feedback */
+#feedback .icon-heart {
+    font-size: 100px;
+    color: wheat;
+}
