--- a/lianpeng/templates/site_base.html
+++ b/lianpeng/templates/site_base.html
@@ -73,8 +73,11 @@
             <h3>{% trans "Feedback" %}</h3>
         </div>
         <div class="modal-body">
-            <div class="row-fluid">
-                <textarea name="text" rows="8" class="span12" placeholder="{% trans "Help us to make it better." %}"></textarea>
+            <div class="row-fluid feedback-input-area">
+                <div class="span3">
+                    <i class="icon-heart"></i>
+                </div>
+                <textarea name="text" rows="8" class="span9" placeholder="{% trans "Help us to make it better." %}"></textarea>
             </div>
             <div class="alert alert-success success hide">
                 {% trans "Thank for your feedback, we will deal with it carefully." %}
