--- a/market/templates/market/snapshot.html
+++ b/market/templates/market/snapshot.html
@@ -66,7 +66,7 @@
             <small>小计：<span class="unit"></span> x <span class="quantity"></span> = ￥</small><span class="total text-success"></span>
         </h3>
         <a href="#" class="btn" data-dismiss="modal" aria-hidden="true">取消</a>
-        <button class="btn btn-primary">支付宝付款</button>
+        <button class="btn pay-btn btn-primary">确定</button>
       </div>
   </form>
 </div>
@@ -108,6 +108,14 @@
             } else {
                 $(this).addClass('disabled');
             }
+        });
+        $('form').submit(function(){
+            $('.pay-btn').addClass('disabled');
+        });
+        $('.pay-btn').click(function(){
+            if($(this).hasClass('disabled')){
+                return false;
+            } 
         });
     </script>
 {% endblock %}
