--- a/bookmark/templates/bookmark/index.html
+++ b/bookmark/templates/bookmark/index.html
@@ -57,7 +57,7 @@ bookmark-app
                                 </a>
                             </li>
                             <li>
-                                <span class="pull-right"><b class="text-success"></b> <small class="label label-success">{% points_for_object user %} karma</small></span>
+                                <span class="pull-right"><b class="text-success"></b> <small class="">{% points_for_object user %} karma</small></span>
                             </li>
                         </ul>
                     </div>
@@ -85,6 +85,11 @@ bookmark-app
                     <li class="explore-menu">
                         <a target="_blank" href="{% url bookmark_explore %}"><i class="icon icon-bolt"></i>
                             {% trans "Explore" %}
+                        </a>
+                    </li>
+                    <li class="snapshot-menu">
+                        <a target="_blank" href="{% url market_app 'snapshot' %}"><i class="icon icon-camera"></i>
+                            {% trans "Snapshot" %} <span class="label label-success">NEW</span>
                         </a>
                     </li>
                     <li class="tool-menu">
