--- a/lianpeng/templates/_account_bar.html
+++ b/lianpeng/templates/_account_bar.html
@@ -43,6 +43,7 @@
                 <li><a href="{% url account_settings %}"><i class="icon-cog"></i> {% trans "Settings" %}</a></li>
                 <li><a href="{% url bookmark_sync %}"><i class="icon-refresh"></i> {% trans "Sync" %}</a></li>
                 <li><a href="{% url bookmark_import %}"><i class="icon-signin"></i> {% trans "Import" %}</a></li>
+                {% if user.is_staff %}
                 <li class="">
                     <a href="{% url market_app 'snapshot' %}"><i class="icon icon-camera"></i>
                         {% trans "Snapshot" %}
@@ -53,6 +54,7 @@
                         {% trans "Orders" %}
                     </a>
                 </li>
+                {% endif %}
                 <li class="divider"></li>
                 {% if user.is_staff %}
                 <li><a href="/admin/" target="_blank"><i class="icon-wrench"></i> {% trans "Admin" %}</a></li>
