--- a/market/templates/market/snapshot.html
+++ b/market/templates/market/snapshot.html
@@ -26,7 +26,7 @@
         </div>
         <div class="span4">
             <h4><big><i class="icon-download text-warning"></i></big> 你的快照总是属于你的</h4>
-            <small class="muted">如果你需要取消快照服务，可以选择下载您的所有快照打包文件，存放到你自己的电脑中。</small>
+            <small class="muted">如果你需要取消快照服务，可以申请下载您的所有快照打包文件，存放到你自己的电脑中。</small>
         </div>
     </div>
 </div>
