--- a/market/templates/market/snapshot.html
+++ b/market/templates/market/snapshot.html
@@ -17,7 +17,7 @@
     </div>
     <div class="row-fluid">
         <div class="span4">
-            <h4><big><i class="icon-desktop text-success"></i></big> 原汁原味</h4>
+            <h4><big><i class="icon-desktop text-success"></i></big> 高保真</h4>
             <small class="muted">莲蓬的网页快照将尽最大限度的将原始网页所有内容、图片、样式以及脚本保留下来，以便能够还原出原始网页的面貌。</small>
         </div>
         <div class="span4">
