--- a/lianpeng/templates/site_base.html
+++ b/lianpeng/templates/site_base.html
@@ -95,6 +95,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/jquery.noty.js" charset="utf-8"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/layouts/top.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/noty/themes/default.js?v=2" charset="utf-8"></script>
+    <script src="{% static "js/eldarion-ajax.min.js" %}"></script>
     {% block extra_script %}{% endblock %}
 {% endblock %}
 {% block body_base %}
