--- a/lianpeng/static/less/bookmark.less
+++ b/lianpeng/static/less/bookmark.less
@@ -161,9 +161,8 @@ a {
 #user-home #lists {
     position: fixed;
     height: 100%;
-    left: 15%;
     background: #eff0f2;
-    width:20%;
+    width:220px;
     .list-wrapper {
         padding:10px;
     }
